testsuite/poke.pkl/acons-diag-8.pk
/* { dg-do compile } */

type Array = struct {};

var a
  = Array (23,3); /* { dg-error "syntax error" } */
